; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_engine.c_interp_neq.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_engine.c_interp_neq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"%s != %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @interp_neq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @interp_neq(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @stack_pop(i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @stack_pop(i32* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @debugstr_jsval(i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @debugstr_jsval(i32 %14)
  %16 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @equal_values(i32* %17, i32 %18, i32 %19, i32* %6)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @jsval_release(i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @jsval_release(i32 %23)
  %25 = load i32, i32* %7, align 4
  %26 = call i64 @FAILED(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %1
  %29 = load i32, i32* %7, align 4
  store i32 %29, i32* %2, align 4
  br label %38

30:                                               ; preds = %1
  %31 = load i32*, i32** %3, align 8
  %32 = load i32, i32* %6, align 4
  %33 = icmp ne i32 %32, 0
  %34 = xor i1 %33, true
  %35 = zext i1 %34 to i32
  %36 = call i32 @jsval_bool(i32 %35)
  %37 = call i32 @stack_push(i32* %31, i32 %36)
  store i32 %37, i32* %2, align 4
  br label %38

38:                                               ; preds = %30, %28
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @stack_pop(i32*) #1

declare dso_local i32 @TRACE(i8*, i32, i32) #1

declare dso_local i32 @debugstr_jsval(i32) #1

declare dso_local i32 @equal_values(i32*, i32, i32, i32*) #1

declare dso_local i32 @jsval_release(i32) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @stack_push(i32*, i32) #1

declare dso_local i32 @jsval_bool(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
